sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value i
  i=0
  ^AlgCombSort:9: error: not found: value i
  while (i+ecart < lgr ){
         ^AlgCombSort:11: error: not found: value i
    if (plusPetitQue(i+ecart,ecart)){
                     ^AlgCombSort:12: error: not found: value i
      echange(i+ecart,ecart)
              ^AlgCombSort:15: error: not found: value i
    i=i+1
    ^